# onshape-to-robot-workflow

./: README.md  pyproject.toml
.github/workflows/: test.yml
data/miku/meshes/: head_visual.stl  left_ankle_pitch_visual.stl  left_ankle_roll_visual.stl  left_ankle_yaw_visual.stl  left_elbow_pitch_visual.stl  left_finger_1_distal_visual.stl  left_finger_1_intermediate_visual.stl  left_finger_1_j1_visual.stl  left_finger_1_j2_visual.stl  left_finger_1_j3_visual.stl  left_finger_1_j4_visual.stl  left_finger_1_mcp_visual.stl  left_finger_1_proximal_visual.stl  left_finger_2_distal_visual.stl  left_finger_2_intermediate_visual.stl  left_finger_2_j1_visual.stl  left_finger_2_j2_visual.stl  left_finger_2_j3_visual.stl  left_finger_2_j4_visual.stl  left_finger_2_mcp_visual.stl  left_finger_2_proximal_visual.stl  left_finger_3_distal_visual.stl  left_finger_3_intermediate_visual.stl  left_finger_3_j1_visual.stl  left_finger_3_j2_visual.stl  left_finger_3_j3_visual.stl  left_finger_3_j4_visual.stl  left_finger_3_mcp_visual.stl  left_finger_3_proximal_visual.stl  left_finger_4_distal_visual.stl  left_finger_4_intermediate_visual.stl  left_finger_4_j1_visual.stl  left_finger_4_j2_visual.stl  left_finger_4_j3_visual.stl  left_finger_4_j4_visual.stl  left_finger_4_mcp_visual.stl  (+84 more)
robot_descriptions/actuators/: func.py  robstride.py
robot_descriptions/piano/: generate_piano_mjcf.py  generate_piano_urdf.py
robot_descriptions/workflow/: onshape_to_urdf.py  urdf_to_mjcf.py
scripts/: convert_urdf_to_mjcf.py  export_onshape_to_urdf.py
tests/: test_urdf_to_mjcf.py
(+139 files in other folders)
