[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-descriptions"
version = "0.3.0"
description = "Robot descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.4.0",
    "onshape-to-robot>=1.8.0",
    "pymeshlab>=2025.7.post1",
]

[project.scripts]
robot-descriptions-onshape-to-urdf = "robot_descriptions.workflow.onshape_to_urdf:main"
robot-descriptions-urdf-to-mjcf = "robot_descriptions.workflow.urdf_to_mjcf:main"

[tool.hatch.build.targets.wheel]
packages = ["robot_descriptions"]

[tool.hatch.build.targets.sdist]
include = [
    "/robot_descriptions",
    "/README.md",
    "/pyproject.toml",
]
